examples/test/testpolicy13611.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13611
  namespace: namespace63
spec:
  podSelector:
    matchLabels:
      key22: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value17
          key45: value16
      podSelector:
        matchLabels:
          key3: value11
          key28: value19
